# telegram-claude-platform

./: .gitignore  CHANGELOG.md  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  installer-test.yml  release.yml
docs/: ADD-NEW-AGENT.md  ARCHITECTURE.md  CLIENT-TEST-INSTRUCTIONS.md  CONTRIBUTING.md  HOOKS.md  INSTALL.md  MEMORY.md  PROACTIVITY.md  PROMPTS.md  RECOVERY.md  SKILLS.md  TROUBLESHOOTING.md
examples/: multi-agent-config.json  single-agent-config.json
gateway/: README.md  pyproject.toml
gateway/src/agent_gateway/: __init__.py  __main__.py  config.py  consumer.py  multi_agent.py
gateway/src/agent_gateway/claude_cli/: __init__.py  boundary.py  runner.py  session.py  stream_parser.py
gateway/src/agent_gateway/memory/: __init__.py  cold.py  hot.py  l4_openviking.py
gateway/src/agent_gateway/tg/: __init__.py  buttons.py  group.py  producer.py  renderer.py  voice.py  webhook_api.py
gateway/tests/: conftest.py  test_add_dir_sandbox.py  test_agents_md_isolation.py  test_boundary.py  test_buttons.py  test_config.py  test_group.py  test_hooks.py  test_hooks_lifecycle.py  test_learnings_engine.py  test_local_recall.py  test_media_handlers.py  test_memory.py  test_models.py  test_multibot_routing.py  test_onboarding_marker.py  test_oob_topic_routing.py  test_p3a.py  test_p3b.py  test_p3c.py  test_p3d.py  test_p4_supply_chain.py  test_p5_process_isolation.py  test_p7_p8.py  test_proactivity.py  test_remote_mode_skill_exemption.py  test_renderer.py  test_runner.py  test_security_regex.py  test_session.py  test_settings_template.py  test_smoke.py  test_stream_parser.py  test_templates.py  test_v021_audit_fixes.py  test_v030_security.py  test_v043.py  test_v044.py  test_v045.py  test_v046_state_backup.py  (+2 more)
installer/: PINS  PINS.repos
installer/lib/: 00-preflight.sh  10-system-deps.sh  15-hardening.sh  20-claude-cli.sh  85-cron.sh  (+14 more)
openviking-lite/: pyproject.toml
openviking-lite/src/openviking_lite/: __init__.py  __main__.py  db.py  embeddings.py  mcp_server.py  server.py
openviking-lite/tests/: test_db.py  test_db_embeddings.py  test_embeddings.py  test_mcp_server.py  test_sanitize.py
tools/: sync-skills.sh
workspace-template/: CLAUDE.md.tmpl
(+85 files in other folders)
