[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openviking-lite"
version = "0.0.1"
description = "Minimal OpenViking-compatible semantic memory server backed by SQLite FTS5"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "tsevmenko" }]
dependencies = [
  "aiohttp>=3.10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.7.0",
]

[project.scripts]
openviking-lite = "openviking_lite.__main__:main"
openviking-lite-mcp = "openviking_lite.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]
